--- a/servitronic.html
+++ b/servitronic.html
@@ -5,15 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SERVITRONIC</title>
+    <link rel="stylesheet" href="./js/style.css">
+    <script src="./js/js.js"></script>
 </head>
 <body>
     <header>
         <div>
             <span></span>
             <a href="https://api.whatsapp.com/send?phone=541157412030"></a>
-            <div class="burger">
-                
-            </div>
+            <div class="hamburger hamburger--elastic">
+                <div class="hamburger-box">
+                  <div class="hamburger-inner"></div>
+                </div>
+              </div>
         </div>
         <img src="" alt="">
         <nav>
