variables de css

--- a/servitronic.html
+++ b/servitronic.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/servitronica/public/stylesheets/styles.css">
     <title>SERVITRONIC</title>
 </head>
 <body>
     <header>
         <div>
-            <span> <h5>Llamenos</h5></span>
+            <span>Llamenos</span>
             <a href="https://api.whatsapp.com/send?phone=541157412030"></a>
             <div class="burger">
                 
