header desktop estructurado, falta efectos y merge con burger

--- a/servitronic.html
+++ b/servitronic.html
@@ -9,8 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <!-- Montserrat -->
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap" rel="stylesheet">
     <!-- Styles -->
     <link rel="stylesheet" href="./public/stylesheets/styles.css">
     <!-- Javascripts -->
@@ -29,11 +28,11 @@
         </div>
         <div class="navLogo">
         <img src="./public/images/logo.svg" alt="logoServitronic">
-        <nav class="navHeader">
-            <ul>
-                <li></li>
-                <li></li>
-                <li></li>
+        <nav class="linkeables">
+            <ul class="ulHeader">
+                <li>NOSOTROS</li>
+                <li>SERVICIOS</li>
+                <li>CONTACTO</li>
             </ul>
         </nav>
     </div>
