--- a/servitronic.html
+++ b/servitronic.html
@@ -24,7 +24,18 @@
                 <div class="hamburger-box">
                   <div class="hamburger-inner"></div>
                 </div>
-              </div>
+            </div>
+            <div class="menuMobile hidden">
+                <nav>
+                    <ul>
+                        <li><a href="#">NOSOTROS</a></li>
+                        <li><a href="#">SERVICIOS</a></li>
+                        <li><a href="#">CONTACTO</a></li>
+                    </ul>
+                </nav>
+                <hr class="mobileHr">
+                <img src="./public/images/Group7031LogoMobile.png" alt="">
+            </div>
         </div>
         <div class="navLogo">
         <img src="./public/images/logo.svg" alt="logoServitronic">
