modifico opacity welcome y arreglo margins

--- a/servitronic.html
+++ b/servitronic.html
@@ -56,14 +56,14 @@
         <section class="welcome">
             <div class="textos">
                 <div class="h1a">
-                    <img src="/public/images/BIENVENIDOS1.svg" alt="">
+                    <img class="outline-top" src="/public/images/BIENVENIDOS1.svg" alt="">
                     <img src="/public/images/BIENVENIDOS2.svg" alt="">
                     <br>
                     <br>
                 </div>                
                 <div class="h1b">
                     
-                    <img src="/public/images/BIENVENIDOS1.svg" alt="">
+                    <img class="outline-bottom" src="/public/images/BIENVENIDOS1.svg" alt="">
                     <img src="/public/images/BIENVENIDOS2.svg" alt="">
                 </div>
                 
