mobile contact is done

--- a/servitronic.html
+++ b/servitronic.html
@@ -10,6 +10,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <!-- Montserrat -->
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap" rel="stylesheet">
     <!-- Styles -->
     <link rel="stylesheet" href="./public/stylesheets/styles.css">
@@ -96,7 +98,7 @@
                 <h2 class="contactTitleOnMobile">PEDI TU PRESUPUESTO</h2>
                 <form method="POST" id="form">
                 ​
-                <input type="hidden" name="apikey" value="561f91ff-bbd9-4cf9-8003-c9db28ddcd42">
+                <input type="hidden" name="apikey" value="2ce33f81-7ebb-4692-8f3f-b7c72732d02a">
                 <input type="hidden" name="subject" value="New Submission from Web3Forms">
                 <input type="checkbox" name="botcheck" id="" style="display: none;">
                 ​
@@ -107,7 +109,7 @@
                 <textarea id="msg" name="textarea" cols="30" rows="10"  style="resize:none" placeholder="Consulta"></textarea>
                 <button type="submit" id="btnSubmit" class="btnFormSubmit">ENVIAR</button>
             </form> 
-            <div id="result"></div>   ​
+            <div id="result"9></div>   ​
             </div>
                 ​
         <aside class="asideContact">
