--- a/servitronic.html
+++ b/servitronic.html
@@ -85,40 +85,38 @@
             
         </section>
     -->
-        <section class="contact">
-            <div><!-- CONTACTO 2 VECES -->
-                <img src="" alt="">
-                <div>
-                    <h2></h2>
-                    <h3></h3>
-                </div>
-                <hr>
-            </div>
-            <div class="contactForm">
+    <div><!-- CONTACTO 2 VECES -->
+        <img src="" alt="">
+        <div>
+            <h2></h2>
+            <h3></h3>
+        </div>
+        <hr>
+    </div>
+    <section class="contact">
+        <div class="contactForm">
                 <h2 class="contactTitleOnMobile">PEDI TU PRESUPUESTO</h2>
                 <form method="POST" id="form">
+                    <input type="hidden" name="apikey" value="2ce33f81-7ebb-4692-8f3f-b7c72732d02a">
+                    <input type="hidden" name="subject" value="New Submission from Web3Forms">
+                    <input type="checkbox" name="botcheck" id="" style="display: none;">
                 ​
-                <input type="hidden" name="apikey" value="2ce33f81-7ebb-4692-8f3f-b7c72732d02a">
-                <input type="hidden" name="subject" value="New Submission from Web3Forms">
-                <input type="checkbox" name="botcheck" id="" style="display: none;">
-                ​
-                <!-- Custom Form Data -->
-                <input id="name"  type="text" name="nombre" class="inputName" placeholder="Nombre">
-                <input id="tel" type="tel" name="telefono" class="" placeholder="Telefono">
-                <input id="email" type="email"  name="email" class="" placeholder="Correo electrónico">
-                <textarea id="msg" name="textarea" cols="30" rows="10"  style="resize:none" placeholder="Consulta"></textarea>
-                <button type="submit" id="btnSubmit" class="btnFormSubmit">ENVIAR</button>
+                    <!-- Custom Form Data -->
+                    <input id="name"  type="text" name="nombre" class="inputName" placeholder="Nombre">
+                    <input id="tel" type="tel" name="telefono" class="" placeholder="Telefono">
+                    <input id="email" type="email"  name="email" class="" placeholder="Correo electrónico">
+                    <textarea id="msg" name="textarea" cols="30" rows="10"  style="resize:none" placeholder="Consulta"></textarea>
+                    <button type="submit" id="btnSubmit" class="btnFormSubmit">ENVIAR</button>
+                    <div id="result"9></div>   ​
             </form> 
-            <div id="result"9></div>   ​
-            </div>
-                ​
+        </div>
         <aside class="asideContact">
-            <img src="" alt=""> <!-- iconito -->
+            <div class="contactLogo"><img src="./public/images/blackIcon.png" alt=""></div>
             <h2>PEDI TU PRESUPUESTO</h2>
             <p>Somos servicio tecnico Oficial de importantes marcas, brindamos la mejor atencion por profesionales.</p>
             <p>Somos servicio tecnico Oficial de importantes marcas, brindamos la mejor atencion por profesionales.</p>
             <p>Somos servicio tecnico Oficial de importantes marcas, brindamos la mejor atencion por profesionales.</p>
-            <img src="/public/images/Frame 4.png" alt="" srcset="">
+            <img src="/public/images/Frame 4.png" alt="" srcset="" id="contactSignature" >
         </aside>
     </section>
     <section class="address">
