banner marcas que atendemos

--- a/servitronic.html
+++ b/servitronic.html
@@ -83,6 +83,7 @@
 
         <section class="brands">
             <!-- Carousel -->
+            <div class="brands-title">MARCAS QUE ATENDEMOS</div>
             <div class="slider">
                 <div class="slide-track">
                     <div class="slide">
