--- a/servitronic.html
+++ b/servitronic.html
@@ -138,8 +138,13 @@
     <div><!-- CONTACTO 2 VECES -->
         <img src="" alt="">
         <div>
-            <h2></h2>
-            <h3></h3>
+            <img src="/public/images/contact.png" alt="" srcset="" class="contactImg">
+            <!-- <h2 class="frontContact">CONTACTO</h2>
+            <h3 class="backContact">CONTACTO</h3> -->
+            <div style="background-color: #C4C4C4;" class="DesktopContactBg">
+
+                <img src="/public/images/contactFrom768.png" alt="" srcset="" class="contactDesktopImg">
+            </div>
         </div>
         <hr>
     </div>
