fin de contacto

--- a/servitronic.html
+++ b/servitronic.html
@@ -175,6 +175,7 @@
             <h2 class="sideServitronic">SERVITRONIC</h2>
         </aside>
     </section>
+    <img src="/public/images/contactFinish.png" alt="" srcset="" class="finishOfContact">
     <section class="address">
         <img src="" alt="">
         <h3></h3>
