--- a/servitronic.html
+++ b/servitronic.html
@@ -52,6 +52,7 @@
             </ul>
         
     </div>
+    <hr class="headerHr">
     </header>
     <main>
         <div class="wppButton"></div>
