--- a/servitronic.html
+++ b/servitronic.html
@@ -87,50 +87,50 @@
             <div class="slider">
                 <div class="slide-track">
                     <div class="slide">
-                        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/1.png" height="100" width="250" alt="" />
+                        <img src="./public/images/cata.png" height="100" width="250" alt="" />
                     </div>
                     <div class="slide">
-                        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/2.png" height="100" width="250" alt="" />
+                        <img src="./public/images/Smeg.png" height="100" width="250" alt="" />
                     </div>
                     <div class="slide">
-                        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/3.png" height="100" width="250" alt="" />
+                        <img src="./public/images/ariston.png" height="100" width="250" alt="" />
                     </div>
                     <div class="slide">
-                        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/4.png" height="100" width="250" alt="" />
+                        <img src="./public/images/bompani.png" height="100" width="250" alt="" />
                     </div>
                     <div class="slide">
-                        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/5.png" height="100" width="250" alt="" />
+                        <img src="./public/images/glem.png" height="100" width="250" alt="" />
                     </div>
                     <div class="slide">
-                        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/6.png" height="100" width="250" alt="" />
+                        <img src="./public/images/whirlpool.png" height="100" width="250" alt="" />
                     </div>
                     <div class="slide">
-                        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/7.png" height="100" width="250" alt="" />
+                        <img src="./public/images/candy.png" height="100" width="250" alt="" />
                     </div>
                     <div class="slide">
-                        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/1.png" height="100" width="250" alt="" />
+                        <img src="./public/images/cata.png" height="100" width="250" alt="" />
                     </div>
                     <div class="slide">
-                        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/2.png" height="100" width="250" alt="" />
+                        <img src="./public/images/smeg.png" height="100" width="250" alt="" />
                     </div>
                     <div class="slide">
-                        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/3.png" height="100" width="250" alt="" />
+                        <img src="./public/images/ariston.png" height="100" width="250" alt="" />
                     </div>
                     <div class="slide">
-                        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/4.png" height="100" width="250" alt="" />
+                        <img src="./public/images/bompani.png" height="100" width="250" alt="" />
                     </div>
                     <div class="slide">
-                        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/5.png" height="100" width="250" alt="" />
+                        <img src="./public/images/glem.png" height="100" width="250" alt="" />
                     </div>
                     <div class="slide">
-                        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/6.png" height="100" width="250" alt="" />
+                        <img src="./public/images/whirlpool.png" height="100" width="250" alt="" />
                     </div>
                     <div class="slide">
-                        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/7.png" height="100" width="250" alt="" />
+                        <img src="./public/images/candy.png" height="100" width="250" alt="" />
                     </div>
                 </div>
             </div>
-            
+         </section>   
         <!-- <section class="service">
             
         </section> -->
