Garantia de confianza

--- a/servitronic.html
+++ b/servitronic.html
@@ -12,6 +12,8 @@
     <!-- Montserrat -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap" rel="stylesheet">
     <!-- Styles -->
     <link rel="stylesheet" href="./public/stylesheets/styles.css">
@@ -77,9 +79,11 @@
         </section>
 
          
-        <!-- <section class="aboutUs">
-            
-        </section> -->
+        <section class="aboutUs">
+            <h2>SERVITRONIC</h2>
+            <h5>GARANTIA DE CONFIANZA</h5>
+            <p>Somos servicio tecnico Oficial de importantes marcas,brindamos la mejor atencion por profesionales</p>
+        </section>
 
         <section class="brands">
             <!-- Carousel -->
