--- a/servitronic.html
+++ b/servitronic.html
@@ -84,46 +84,46 @@
             <div class="slider">
                 <div class="slide-track">
                     <div class="slide">
-                        <img src="./public/images/cata.png" height="80" width="250" alt="" />
+                        <img src="./public/images/cata.png" height="60" width="250" alt="" />
                     </div>
                     <div class="slide">
-                        <img src="./public/images/Smeg.png" height="80" width="250" alt="" />
+                        <img src="./public/images/Smeg.png" height="55" width="250" alt="" />
                     </div>
                     <div class="slide">
-                        <img src="./public/images/ariston.png" height="80" width="250" alt="" />
+                        <img src="./public/images/ariston.png" height="50" width="250" alt="" />
                     </div>
                     <div class="slide">
-                        <img src="./public/images/bompani.png" height="80" width="250" alt="" />
+                        <img src="./public/images/bompani.svg" height="70" width="250" alt="" />
                     </div>
                     <div class="slide">
-                        <img src="./public/images/glem.png" height="80" width="250" alt="" />
+                        <img src="./public/images/glem.png" height="60" width="250" alt="" />
                     </div>
                     <div class="slide">
-                        <img src="./public/images/whirlpool.png" height="80" width="250" alt="" />
+                        <img src="./public/images/whirlpool.png" height="70" width="250" alt="" />
                     </div>
                     <div class="slide">
-                        <img src="./public/images/candy.png" height="80" width="250" alt="" />
+                        <img src="./public/images/candy.svg" height="60" width="250" alt="" />
                     </div>
                     <div class="slide">
-                        <img src="./public/images/cata.png" height="80" width="250" alt="" />
+                        <img src="./public/images/cata.png" height="60" width="250" alt="" />
                     </div>
                     <div class="slide">
-                        <img src="./public/images/smeg.png" height="80" width="250" alt="" />
+                        <img src="./public/images/smeg.png" height="55" width="250" alt="" />
                     </div>
                     <div class="slide">
-                        <img src="./public/images/ariston.png" height="80" width="250" alt="" />
+                        <img src="./public/images/ariston.png" height="50" width="250" alt="" />
                     </div>
                     <div class="slide">
-                        <img src="./public/images/bompani.png" height="80" width="250" alt="" />
+                        <img src="./public/images/bompani.svg" height="80" width="250" alt="" />
                     </div>
                     <div class="slide">
-                        <img src="./public/images/glem.png" height="80" width="250" alt="" />
+                        <img src="./public/images/glem.png" height="60" width="250" alt="" />
                     </div>
                     <div class="slide">
-                        <img src="./public/images/whirlpool.png" height="80" width="250" alt="" />
+                        <img src="./public/images/whirlpool.png" height="70" width="250" alt="" />
                     </div>
                     <div class="slide">
-                        <img src="./public/images/candy.png" height="80" width="250" alt="" />
+                        <img src="./public/images/candy.svg" height="60" width="250" alt="" />
                     </div>
                 </div>
             </div>
