--- a/servitronic.html
+++ b/servitronic.html
@@ -13,6 +13,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap" rel="stylesheet">
+    <!-- font awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
     <!-- Styles -->
     <link rel="stylesheet" href="./public/stylesheets/styles.css">
     <!-- Javascripts -->
@@ -173,31 +175,29 @@
     </section>
     <img src="/public/images/contactFinish.png" alt="" srcset="" class="finishOfContact">
     <section class="address">
-        <img src="" alt="">
-        <div style="background-color: #C4C4C4;" class="DesktopContactBg">
-            <h2 class="frontContact">DIRECCIÓN</h2>
-        </div>
-        <h3></h3>
-        <h5></h5>
         <div>
-            <i></i>
-            <p></p>
-            <a href="https://goo.gl/maps/wNQDg6vJcYeRgiRp7"></a>
-        </div>
-        <div class="adress-section">
+            <h2 class="frontContact">DIRECCIÓN</h2>
+        </div>  
+        <div class="address-section">
             <figure>
                 <img src="/public/images/Frame 7.png" alt="" srcset="">
             </figure>
-            <div class="adress-text">
-                <div class="adress-brand">
-                    <h2 class="sideServitronic">SERVITRONIC</h2>
+            <div class="adress-content">
+            <div class="address-text">
+                <div class="address-brand">
+                    <h2 class="address-asside">SERVITRONIC</h2>
                 </div>
-                <div class="adress-title">
-                    <h1>DIRECCION</h1>
+                <div class="address-title">
+                    <h1>dirección</h1>
                 </div>
-                <div class="adress">
-                    <p>Ramon Falcon 4858 Carapachay, Vicente Lopez</p>
+                <div class="address">
+                    <p>
+                        <i class="fas fa-map-marker-alt"></i>
+                        Ramon Falcon 4858 <br>
+                        Carapachay, Vicente Lopez
+                    </p>
                 </div>
+            </div>
             </div>
             <div class="map-google">
             <iframe
