--- a/site/servitronic.html
+++ b/site/servitronic.html
@@ -20,7 +20,7 @@
     <!-- Styles -->
     <link rel="stylesheet" href="./public/stylesheets/styles.css">
     <!-- Javascripts -->
-    <script src="./public/javascripts/app.js"></script>
+    <script src="/site/public/javascripts/app.js"></script>
 </head>
 
 <body>
