--- a/site/servitronic.html
+++ b/site/servitronic.html
@@ -18,7 +18,7 @@
     <!-- font awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
     <!-- Styles -->
-    <link rel="stylesheet" href="./public/stylesheets/styles.css">
+    <link rel="stylesheet" href="/site/public/stylesheets/styles.css">
     <!-- Javascripts -->
     <script src="/site/public/javascripts/app.js"></script>
 </head>
