--- a/site/servitronic.html
+++ b/site/servitronic.html
@@ -247,7 +247,7 @@
     </section>
 </main>
 <footer>
-    <a href="#top"><img src="./public/images/GrouplogoWhitesvg.svg" alt="Servitronic footer"></a>
+    <a href="#top"><img src="/public/images/Group 6991whiteServitronic.svg" alt="Servitronic footer"></a>
     <span>Llámenos hoy <a href="https://api.whatsapp.com/send?phone=541157412030">11-3526-4499</a></span>
 </footer>
 
