--- a/site/servitronic.html
+++ b/site/servitronic.html
@@ -184,7 +184,7 @@
                     <div class="stickyLogo">
                         <img src="./public/images/Group7031LogoMobile.png" alt="">
                     </div>
-                <!-- img class="imgDesktop" src="/public/images/bordeimg.png" alt=""> -->
+                 <img class="imgDesktop" src="./public/images/bordeimg.png" alt=""> 
             </div>
             </div>
 
