--- a/site/servitronic.html
+++ b/site/servitronic.html
@@ -85,7 +85,7 @@
 
          
         <section class="aboutUs" id="nosotros">
-            <h2>SERVITRONIC</h2>
+            <img src="/site/public/images/SERVITRONIC.png" width="100%" alt="">
             <h5>GARANTÍA DE CONFIANZA</h5>
             <p>Somos servicio técnico oficial de importantes marcas, brindamos la mejor atención por profesionales</p>
         </section>
