arreglo hr de service, hay un margen en infoBoxes que rompe el texto del costado

--- a/site/servitronic.html
+++ b/site/servitronic.html
@@ -145,7 +145,7 @@
            <div class="servicios">
            <h4 class="titulo-service">SERVICIOS</h4>
            </div>
-           <div class="grid-box">
+           <div class="to-box">
                  <div class="boxes-informacion">
                      <article class="boxInfo">
                         <img class="imgBox" src="./public/images/staf.png" alt="staff">
