cambio de etiquetas html, text shadow, font weights y sizes

--- a/site/servitronic.html
+++ b/site/servitronic.html
@@ -177,10 +177,12 @@
                  </div>
                  <div class="estamosText">
                     
-                 <p class="estamos">“<strong> Estamos a su lado </strong>para resolver los inconvenientes que electromesticos y equipamientos del hogar puedan presentar y nos alegra llevarles soluciones a estos problemas cotidianos”
-                <marquee behavior="" direction=""> CONTACTANOS </marquee> </p>
+                 <p class="estamos"><span class="textoNegrita">"Estamos a su lado </span> <span class="textoLighter"> para resolver los inconvenientes que electromésticos y equipamientos del hogar puedan presentar y nos alegra llevarles soluciones a estos problemas cotidianos"</span>
+                     </p>
                  <img class="imgMobile" src="./public/images/Frame 8.png" alt="" width="100%">
+                 <marquee behavior="" direction=""> CONTACTANOS </marquee>
                 </div>
+                
                 <div class="imagenLogo">
                     <div class="stickyLogo">
                         <img src="./public/images/Group7031LogoMobile.png" alt="">
