--- a/site/servitronic.html
+++ b/site/servitronic.html
@@ -224,12 +224,12 @@
         <aside class="asideContact">
             <div class="contactLogo"><img src="./public/images/blackIcon.png" alt=""></div>
             <h2 class="desktopPrice">PEDÍ TU PRESUPUESTO</h2>
-            <p>Envianos tu consulta, detallando: la marca, que incoveniente tiene y ubicacion,</p>
+            <p>Envianos tu consulta, detallando: la marca, qué incoveniente tiene y ubicación,</p>
             <p> o comunicate al 112704-3091.</p>
             <hr class="hrContact">
-            <p style="font-weight: bold;">La revision del equipo tiene un costo de $800 que incluye la visita.</p>
+            <p style="font-weight: bold;">La revisión del equipo tiene un costo de $800 que incluye la visita.</p>
             <hr class="hrContact">
-            <p>En el caso que acepten el presupuesto y se realize ahi mismo el trabajo</p>
+            <p>En el caso que acepten el presupuesto y se realice ahí mismo el trabajo</p>
             <p>no se cobra visita, te estamos esperando.</p>
             <img src="/public/images/Frame 4.png" alt="" srcset="" id="contactSignature" >
             <h2 class="sideServitronic">SERVITRONIC</h2>
