--- a/site/servitronic.html
+++ b/site/servitronic.html
@@ -274,7 +274,7 @@
     <a href="#top"><img src="./public/images/Group 6991whiteServitronic.svg" alt="Servitronic footer"></a>
     <span>Llámenos hoy <a href="https://api.whatsapp.com/send?phone=541157412030">11-3526-4499</a></span>
 </footer>
-
+<script src="./public/javascripts/llamenos.js"></script>
 </body>
 
 </html>
