--- a/site/servitronic.html
+++ b/site/servitronic.html
@@ -20,7 +20,7 @@
     <!-- Styles -->
     <link rel="stylesheet" href="./public/stylesheets/styles.css">
     <!-- Javascripts -->
-    <script src="/public/javascripts/app.js" defer></script>
+    <script src="./public/javascripts/app.js" defer></script>
     <script src="/public/javascripts/form.js" defer></script>
 </head>
 
