finalizo service mobile

--- a/site/servitronic.html
+++ b/site/servitronic.html
@@ -199,7 +199,7 @@
         <div>
             <img src="/public/images/contact.png" alt="" srcset="" class="contactImg">
             <div style="background-color: #C4C4C4;" class="DesktopContactBg">
-                <img src="./public/images/CONTACTO.png" width="100%" style="margin-top: -50px;" alt="">
+                <img src="./public/images/CONTACTO.png" width="100%" style=";" alt="">
                 <!-- <h2 class="frontContact">CONTACTO</h2> -->
             </div>
         </div>
