servicio en mobile de fondo

--- a/site/servitronic.html
+++ b/site/servitronic.html
@@ -143,6 +143,7 @@
        
        <section class="service">
            <div class="servicios">
+               <img class="serviciosImg" width="100%" src="./public/images/SERVICIOS.png" alt="">
            <h4 class="titulo-service">SERVICIOS</h4>
            </div>
            <div class="to-box">
