--- a/site/servitronic.html
+++ b/site/servitronic.html
@@ -195,7 +195,7 @@
         <img src="" alt="">
         <div>
             <img src="/public/images/contact.png" alt="" srcset="" class="contactImg">
-            <div style="background-color: #C4C4C4;" class="DesktopContactBg">
+            <div style="background-color: #C4C4C4; width: 100%;" class="DesktopContactBg">
                 <h2 class="frontContact">CONTACTO</h2>
             </div>
         </div>
