--- a/site/servitronic.html
+++ b/site/servitronic.html
@@ -241,7 +241,7 @@
         </div>
         <div class="address-section">
             <figure >
-                <img  class="address-img" src="./public/images/Frame 7.png" alt="" srcset="">
+                <img  class="address-img" src="./public/images/address-img.png" alt="" srcset="">
             </figure>
             <div class="adress-content">
             <div class="address-text">
