fix address position

--- a/site/servitronic.html
+++ b/site/servitronic.html
@@ -195,7 +195,7 @@
        </section>
         
    
-    <div>
+    <div >
         <img src="" alt="">
         <div>
             <img src="/public/images/contact.png" alt="" srcset="" class="contactImg">
@@ -250,7 +250,7 @@
                     <!-- <h2 class="address-asside">SERVITRONIC</h2> -->
                     <img class='address-servitronic' src="./public/images/Group.png" alt="" srcset="">
                 </div>
-                <div>
+                <div class='address-container-desk'>
                 <div class="address-title">
                     <h1>dirección</h1>
                 </div>
