armando cajas de marcas

--- a/site/servitronic.html
+++ b/site/servitronic.html
@@ -200,46 +200,43 @@
                 <img src="" alt="">
             </section>
             <section class="importantBrands">
-                <article>
+                <div class="SmegFirst">
+                <article class="cajaConFoto">
+                    <hr style="width: 22px; border:1px solid black">
+                    <small>SMEG</small>
                     <figure>
                         <img class="importantBrandsImg" src="./public/images/address-img.png" alt="">
                     </figure>
-                    <div>
-                        <hr>
-                        <small>SMEG</small>
-                        <p>Son la prueba de que sofisticación y tecnología pueden converger en un mismo lugar.</p>
-                    </div>
+                        <p class="textoMarca">Son la prueba de que sofisticación y tecnología pueden converger en un mismo lugar.</p>
                 </article>
-                <article>
+                <article class="cajaConFoto">
+                    <hr style="width: 22px; border:1px solid black">
+                    <small>ARISTON</small>
                     <figure>
                         <img class="importantBrandsImg" src="./public/images/address-img.png" alt="">
                     </figure>
-                    <div>
-                        <hr>
-                        <small>GLEM</small>
-                        <p>Detalles con estilo, elegancia y funcionalidad; las características de la calidad y el diseño italiano, con rendimiento elevado.</p>
-                    </div>
+                    <p class="textoMarca">Para Ariston, la innovación significa facilitar la vida de las personas, fiable en el tiempo y con estética.</p>
                 </article>
-                <article>
-                    <figure>
-                        <img class="importantBrandsImg" src="./public/images/address-img.png" alt="">
-                    </figure>
-                    <div>
-                        <hr>
-                        <small>ARISTON</small>
-                        <p>Para Ariston, la innovación significa facilitar la vida de las personas, fiable en el tiempo y con estética.</p>
-                    </div>
-                </article>
-                <article>
-                    <figure>
-                        <img class="importantBrandsImg" src="./public/images/address-img.png" alt="">
-                    </figure>
-                    <div>
-                        <hr>
+               
+            </div>
+            <div class="glemSecond">
+            <article class="cajaConFoto">
+                <hr>
+                <small>GLEM</small>
+                <figure>
+                    <img class="importantBrandsImg" src="./public/images/address-img.png" alt="">
+                </figure>                 
+                <p class="textoMarca">Detalles con estilo, elegancia y funcionalidad; las características de la calidad y el diseño italiano, con rendimiento elevado.</p>
+            </article>
+                <article class="cajaConFoto">
+                    <hr>
                         <small>CATA</small>
-                        <p>Alcanzando su posición de liderazgo en el mercado, gracias a su gran capacidad de anticiparse a las necesidades.</p>
-                    </div>
+                    <figure>
+                        <img class="importantBrandsImg" src="./public/images/address-img.png" alt="">
+                    </figure>
+                    <p class="textoMarca">Alcanzando su posición de liderazgo en el mercado, gracias a su gran capacidad de anticiparse a las necesidades.</p>
                 </article>
+            </div>
             </section>
             <section class="otherBrands"></section>
         </section>
