--- a/site/servitronic.html
+++ b/site/servitronic.html
@@ -219,9 +219,9 @@
                 </article>
                
             </div>
-            <div class="glemSecond">
+            <div class="SmegFirst">
             <article class="cajaConFoto">
-                <hr>
+                <hr style="width: 22px; border:1px solid black">
                 <small>GLEM</small>
                 <figure>
                     <img class="importantBrandsImg" src="./public/images/address-img.png" alt="">
@@ -229,7 +229,7 @@
                 <p class="textoMarca">Detalles con estilo, elegancia y funcionalidad; las características de la calidad y el diseño italiano, con rendimiento elevado.</p>
             </article>
                 <article class="cajaConFoto">
-                    <hr>
+                    <hr style="width: 22px; border:1px solid black">
                         <small>CATA</small>
                     <figure>
                         <img class="importantBrandsImg" src="./public/images/address-img.png" alt="">
