cajas terminadas mobile, yendo a desktop

--- a/site/servitronic.html
+++ b/site/servitronic.html
@@ -197,13 +197,13 @@
        </section>
         <section class="gridBrands">
             <section class="brandsTitle">
-                <img src="" alt="">
+                <h3 class="marcasPrincipalTitulo">MARCAS</h3>
             </section>
             <section class="importantBrands">
                 <div class="SmegFirst">
                 <article class="cajaConFoto">
                     <hr style="width: 22px; border:1px solid black">
-                    <small>SMEG</small>
+                    <small class="tituloDeMarcas">SMEG</small>
                     <figure>
                         <img class="importantBrandsImg" src="./public/images/address-img.png" alt="">
                     </figure>
@@ -211,7 +211,7 @@
                 </article>
                 <article class="cajaConFoto">
                     <hr style="width: 22px; border:1px solid black">
-                    <small>ARISTON</small>
+                    <small class="tituloDeMarcas">ARISTON</small>
                     <figure>
                         <img class="importantBrandsImg" src="./public/images/address-img.png" alt="">
                     </figure>
@@ -220,22 +220,23 @@
                
             </div>
             <div class="SmegFirst">
-            <article class="cajaConFoto">
-                <hr style="width: 22px; border:1px solid black">
-                <small>GLEM</small>
-                <figure>
-                    <img class="importantBrandsImg" src="./public/images/address-img.png" alt="">
-                </figure>                 
-                <p class="textoMarca">Detalles con estilo, elegancia y funcionalidad; las características de la calidad y el diseño italiano, con rendimiento elevado.</p>
-            </article>
                 <article class="cajaConFoto">
                     <hr style="width: 22px; border:1px solid black">
-                        <small>CATA</small>
+                    <small class="tituloDeMarcas">CATA</small>
                     <figure>
                         <img class="importantBrandsImg" src="./public/images/address-img.png" alt="">
                     </figure>
                     <p class="textoMarca">Alcanzando su posición de liderazgo en el mercado, gracias a su gran capacidad de anticiparse a las necesidades.</p>
                 </article>
+            <article class="cajaConFoto">
+                <hr style="width: 22px; border:1px solid black">
+                <small class="tituloDeMarcas">GLEM</small>
+                <figure>
+                    <img class="importantBrandsImg" src="./public/images/address-img.png" alt="">
+                </figure>                 
+                <p class="textoMarca">Detalles con estilo, elegancia y funcionalidad; las características de la calidad y el diseño italiano, con rendimiento elevado.</p>
+            </article>
+               
             </div>
             </section>
             <section class="otherBrands"></section>
