other brands mobile

--- a/site/servitronic.html
+++ b/site/servitronic.html
@@ -199,7 +199,7 @@
             <section class="brandsTitle">
                 <img src="" alt="">
             </section>
-            <section class="importantBrands">
+            <!-- <section class="importantBrands">
                 <article>
                     <figure>
                         <img class="importantBrandsImg" src="./public/images/address-img.png" alt="">
@@ -240,8 +240,22 @@
                         <p>Alcanzando su posición de liderazgo en el mercado, gracias a su gran capacidad de anticiparse a las necesidades.</p>
                     </div>
                 </article>
+            </section> -->
+            <section class="otherBrands">
+                <img class="otherBrandsImgs" src="./public/images/address-img.png" alt="">
+                <img class="otherBrandsImgs" src="./public/images/address-img.png" alt="">
+                <img class="otherBrandsImgs" src="./public/images/address-img.png" alt="">
+                <img class="otherBrandsImgs" src="./public/images/address-img.png" alt="">
+                <div class="flex Servicio"><span>SERVICIO</span><hr></div>
+                <img class="otherBrandsImgs" src="./public/images/address-img.png" alt="">
+                <img class="otherBrandsImgs" src="./public/images/address-img.png" alt="">
+                <div class="flex Oficial"><hr>OFICIAL</div>
+                <img class="otherBrandsImgs" src="./public/images/address-img.png" alt="">
+                <img class="otherBrandsImgs" src="./public/images/address-img.png" alt="">
+                <div class="flex EnTuHogar">EN TÚ HOGAR</div>
+                <img class="otherBrandsImgs" src="./public/images/address-img.png" alt="">
+                <img class="otherBrandsImgs" src="./public/images/address-img.png" alt="">
             </section>
-            <section class="otherBrands"></section>
         </section>
    
     <div >
