--- a/site/servitronic.html
+++ b/site/servitronic.html
@@ -196,6 +196,9 @@
 
        </section>
         <section class="gridBrands">
+            <section class="brandsTitleDesktop">
+             <img src="./public/images/mARCAS222.png" alt="">
+            </section>
             <section class="brandsTitle">
                 <h3 class="marcasPrincipalTitulo">MARCAS</h3>
             </section>
