--- a/site/servitronic.html
+++ b/site/servitronic.html
@@ -197,7 +197,7 @@
        </section>
         <section class="gridBrands">
             <section class="brandsTitleDesktop">
-             <img src="./public/images/mARCAS222.png" alt="">
+             <img class="imgitulomarcad" src="./public/images/mARCAS222.png" alt="">
             </section>
             <section class="brandsTitle">
                 <h3 class="marcasPrincipalTitulo">MARCAS</h3>
