--- a/site/servitronic.html
+++ b/site/servitronic.html
@@ -214,7 +214,7 @@
                     <hr class="mobileHr" style="width: 22px; border:1px solid black">
                     <small class="tituloDeMarcas">SMEG</small>
                     <figure>
-                        <img class="importantBrandsImg" src="./public/images/address-img.png" alt="">
+                        <img class="importantBrandsImg" src="./public/images/smeg.jpg" alt="">
                     </figure>
                     <div class="desktopAcomodo">
                         <hr class="desktopHr" style="width: 22px; border:1px solid black">
@@ -227,7 +227,7 @@
                     <hr class="mobileHr" style="width: 22px; border:1px solid black">
                     <small class="tituloDeMarcas">ARISTON</small>
                     <figure>
-                        <img class="importantBrandsImg" src="./public/images/address-img.png" alt="">
+                        <img class="importantBrandsImg" src="./public/images/ariston.png" alt="">
                     </figure>
                     <div class="desktopAcomodo">
                         <hr class="desktopHr" style="width: 22px; border:1px solid black">
@@ -243,7 +243,7 @@
                     <hr class="mobileHr" style="width: 22px; border:1px solid black">
                     <small class="tituloDeMarcas">CATA</small>
                     <figure>
-                        <img class="importantBrandsImg" src="./public/images/address-img.png" alt="">
+                        <img class="importantBrandsImg" src="./public/images/Cata.png" alt="">
                     </figure>
                     <div class="desktopAcomodo"> 
                         <hr class="desktopHr" style="width: 22px; border:1px solid black">
@@ -255,7 +255,7 @@
                     <hr class="mobileHr" style="width: 22px; border:1px solid black">
                     <small class="tituloDeMarcas">GLEM</small>
                     <figure>
-                        <img class="importantBrandsImg" src="./public/images/address-img.png" alt="">
+                        <img class="importantBrandsImg" src="./public/images/glem.png" alt="">
                         
                     </figure>
                     <div class="desktopAcomodo"> 
@@ -264,6 +264,7 @@
                     <p class="textoMarca">Detalles con estilo, elegancia y funcionalidad; las características de la calidad y el diseño italiano, con rendimiento elevado.</p>
                 </div> 
                 </article>
+                </div>
             </section> 
             
             <section class="otherBrands">
