--- a/site/servitronic.html
+++ b/site/servitronic.html
@@ -28,7 +28,7 @@
 <body>
     <header id="top">
         <div class="llamenos"  >
-            <span>Llámenos hoy <a href="https://api.whatsapp.com/send?phone=541157412030">11-2704-3091</a></span>
+            <span>Llámenos hoy <a href="tel:1127043091">11-2704-3091</a></span>
             
             <div class="hamburger hamburger--elastic">
                 <div class="hamburger-box">
@@ -64,7 +64,7 @@
     </header>
     <main>
         <div class="boton-wsp" >
-        <a class="logoWsp" href="https://api.whatsapp.com/send?phone=1135264499" target="_blank">
+        <a class="logoWsp" href="https://api.whatsapp.com/send?phone=1127043091" target="_blank">
             <lottie-player src="https://assets9.lottiefiles.com/packages/lf20_dyf5lscb.json"  background="transparent"  speed="1"  style="width: 60px; height: 60px;"  loop  autoplay></lottie-player>
           </a>
         </div>
