cambios en el footer

--- a/site/servitronic.html
+++ b/site/servitronic.html
@@ -414,8 +414,19 @@ a tus requerimientos.
     </section>
 </main>
 <footer>
-    <a href="#top"><img src="./public/images/Group 6991whiteServitronic.svg" alt="Servitronic footer"></a>
-    <span>Llámenos hoy <a href="https://api.whatsapp.com/send?phone=541157412030">11-3526-4499</a></span>
+    <div class="footer-divs" style="padding-top: 20px;">
+    <a href="#top" id="logo-footer"><img src="./public/images/Group 6991whiteServitronic.svg" alt="Servitronic footer"></a>
+    <span id="llamenos">Llámenos hoy <a href="https://api.whatsapp.com/send?phone=541157412030">11-3526-4499</a></span>
+</div>
+<hr style="width: 65%;">
+<div class="footer-divs" style="padding-bottom: 20px; font-weight: lighter;">
+    <p>© 2021 Viajero Estudio</p>
+    <div style="display: flex;">
+        <p>PRIVACY POLICY</p><p style="margin-left: 15px;">TERMS OF SERVICE</p>
+        
+    </div>
+    
+</div>
 </footer>
 <script src="./public/javascripts/llamenos.js"></script>
 </body>
